2010-05-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Release 2.2.139-1.

2010-05-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#164472 Chess Game Castle immovable in PR1.2

	Small regression introduced with 9973690dfd324db1dc0d9d819dce9375e6c11658.

	* src/home/hd-render-manager.c (hd_render_manager_remove_input_blocker):
	  Check the HdTitleBar visibility too, not just the button state.

2010-05-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#159865 Unable to open SMS/chat notification if received
		  when FKB is opened

	FKB has become non-fullscreen recently.

	* src/mb/hd-wm.c:
	  hd_wm_is_fullscreen_vkb: renamed
	  hd_wm_is_fkb: recognize non-fullscreen but maximized dialogs

2010-05-14  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Fix rotated blur group contents when rotating from P->L while
	the animation was still progressing.  This can be considered
	part of 8fcb4c6a7f58c07d5ece4a6ec10b5f17a6b77681 (NB#165767).
	Can be tested by setting blur::radius to 120.

	* src/tidy/tidy-blur-group.c (tidy_blur_group_stop_progressing):
	  New function to tell TidyBlurGroup not to attempt progressing
	  the blur animation which doesn't play well with rotation.
	* src/tidy/tidy-blur-group.c (tidy_blur_group_paint):
	  Observe the new flag.
	* src/util/hd-transition.c (hd_transition_rotating_fsm):
	  And set it in phase 0, so the cached group will have
	  sane contents.

2010-05-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Small performance work in the blur group.

	* src/tidy/tidy-blur-group.c (tidy_blur_group_paint):
	  Don't store the previous texture filter quality in a dataset,
	  but use a cheaper array instead.

2010-05-10  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Blur group optimizations.

	* src/tidy/tidy-blur-group.h:
	  Removed TidyBlurGroupClass::overridden_paint.
	* src/tidy/tidy-blur-group.c:
	  tidy_blur_group_init: upload the shaders when the object is created
	  tidy_blur_group_allocate_textures: allocate the textures when our